--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: "Build container image"
 on:
   push:
     branches:
-    - main
+      - main
   workflow_dispatch:
 
 jobs:
@@ -11,21 +11,26 @@ jobs:
     name: "Build"
     runs-on: ubuntu-latest
     steps:
-    - name: "⬇ Checkout"
-      uses: actions/checkout@v3
-    - name: "🐳 Set up Docker Buildx"
-      uses: docker/setup-buildx-action@v2
-    - name: "🐳 Login to GHCR"
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: foosel
-        password: ${{ secrets.PAT }}
-    - name: "🏗 Build"
-      id: docker_build
-      uses: docker/build-push-action@v4
-      with:
-        context: ./src
-        push: true
-        tags: |
-          ghcr.io/octoprint/custopizer:latest
+      - name: "⬇ Checkout"
+        uses: actions/checkout@v3
+      - name: "🐳 Set up Docker Buildx"
+        uses: docker/setup-buildx-action@v2
+      - name: "🐳 Login to GHCR"
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: "🏗 Build"
+        id: docker_build
+        uses: docker/build-push-action@v4
+        with:
+          context: ./src
+          push: true
+          platforms: linux/amd64,linux/arm64/v8,linux/arm64/v7
+          tags: |
+            ghcr.io/octoprint/custopizer:latest
