--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,19 +6,35 @@ on:
       - main
   workflow_dispatch:
 
+env:
+  DOCKER_REGISTRY: ghcr.io
+  CREATE_IMAGE_NAME: custopizer
+
 jobs:
   build:
     name: "Build"
     runs-on: ubuntu-latest
+    concurrency:
+      group: ${DOCKER_REGISTRY}/${CREATE_IMAGE_NAME}:${{github.ref_name}}
+      cancel-in-progress: true
     steps:
       - name: "⬇ Checkout"
         uses: actions/checkout@v3
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${DOCKER_REGISTRY}/${CREATE_IMAGE_NAME}
+          tags: |
+            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'master') }}
+            type=ref,event=tag
+            type=ref,event=branch
       - name: "🐳 Set up Docker Buildx"
         uses: docker/setup-buildx-action@v2
       - name: "🐳 Login to GHCR"
         uses: docker/login-action@v2
         with:
-          registry: ghcr.io
+          registry: ${DOCKER_REGISTRY}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Set up QEMU
@@ -32,5 +48,9 @@ jobs:
           context: ./src
           push: true
           platforms: linux/amd64,linux/arm64/v8,linux/arm64/v7
-          tags: |
-            ghcr.io/octoprint/custopizer:latest
+          tags: ${{steps.meta.outputs.tags}}
+          labels: ${{steps.meta.outputs.labels}}
+          # yamllint disable-line rule:line-length
+          cache-from: type=registry,ref=${DOCKER_REGISTRY}/${CREATE_IMAGE_NAME}:buildcache
+          # yamllint disable-line rule:line-length
+          cache-to: type=registry,ref=${DOCKER_REGISTRY}/${CREATE_IMAGE_NAME}:buildcache,mode=max
