--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
         with:
           context: ./src
           push: true
-          platforms: linux/amd64,linux/arm64/v8,linux/arm64/v7
+          platforms: linux/amd64,linux/arm64/v8
           tags: ${{steps.meta.outputs.tags}}
           labels: ${{steps.meta.outputs.labels}}
           # yamllint disable-line rule:line-length
