--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 env:
-  DOCKER_REGISTRY: ghcr.io
+  DOCKER_REGISTRY: ghcr.io/haakco
   CREATE_IMAGE_NAME: custopizer
 
 jobs:
@@ -15,7 +15,7 @@ jobs:
     name: "Build"
     runs-on: ubuntu-latest
     concurrency:
-      group: ${DOCKER_REGISTRY}/${CREATE_IMAGE_NAME}:${{github.ref_name}}
+      group: "${DOCKER_REGISTRY}/${CREATE_IMAGE_NAME}:${{github.ref_name}}"
       cancel-in-progress: true
     steps:
       - name: "⬇ Checkout"
@@ -24,7 +24,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${DOCKER_REGISTRY}/${CREATE_IMAGE_NAME}
+          images: "${DOCKER_REGISTRY}/${CREATE_IMAGE_NAME}"
           tags: |
             type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'master') }}
             type=ref,event=tag
@@ -34,7 +34,7 @@ jobs:
       - name: "🐳 Login to GHCR"
         uses: docker/login-action@v2
         with:
-          registry: ${DOCKER_REGISTRY}
+          registry: "${DOCKER_REGISTRY}"
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Set up QEMU
@@ -51,6 +51,6 @@ jobs:
           tags: ${{steps.meta.outputs.tags}}
           labels: ${{steps.meta.outputs.labels}}
           # yamllint disable-line rule:line-length
-          cache-from: type=registry,ref=${DOCKER_REGISTRY}/${CREATE_IMAGE_NAME}:buildcache
+          cache-from: "type=registry,ref=${DOCKER_REGISTRY}/${CREATE_IMAGE_NAME}:buildcache"
           # yamllint disable-line rule:line-length
-          cache-to: type=registry,ref=${DOCKER_REGISTRY}/${CREATE_IMAGE_NAME}:buildcache,mode=max
+          cache-to: "type=registry,ref=${DOCKER_REGISTRY}/${CREATE_IMAGE_NAME}:buildcache,mode=max"
