--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
     name: "Build"
     runs-on: ubuntu-latest
     concurrency:
-      group: "${DOCKER_REGISTRY}/${CREATE_IMAGE_NAME}:${{github.ref_name}}"
+      group: ${{ env.DOCKER_REGISTRY }}/${{ env.CREATE_IMAGE_NAME }}:${{github.ref_name}}"
       cancel-in-progress: true
     steps:
       - name: "⬇ Checkout"
@@ -24,7 +24,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: "${DOCKER_REGISTRY}/${CREATE_IMAGE_NAME}"
+          images: ${{ env.DOCKER_REGISTRY }}/${{ env.CREATE_IMAGE_NAME }}
           tags: |
             type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'master') }}
             type=ref,event=tag
@@ -51,6 +51,6 @@ jobs:
           tags: ${{steps.meta.outputs.tags}}
           labels: ${{steps.meta.outputs.labels}}
           # yamllint disable-line rule:line-length
-          cache-from: "type=registry,ref=${DOCKER_REGISTRY}/${CREATE_IMAGE_NAME}:buildcache"
+          cache-from: "type=registry,ref=${{ env.DOCKER_REGISTRY }}/${{ env.CREATE_IMAGE_NAME }}:buildcache"
           # yamllint disable-line rule:line-length
-          cache-to: "type=registry,ref=${DOCKER_REGISTRY}/${CREATE_IMAGE_NAME}:buildcache,mode=max"
+          cache-to: "type=registry,ref=${{ env.DOCKER_REGISTRY }}/${{ env.CREATE_IMAGE_NAME }}:buildcache,mode=max"
