--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: ./src
+          pull: true
           push: true
           platforms: linux/amd64,linux/arm64/v8
           tags: ${{steps.meta.outputs.tags}}
