--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,17 +1,17 @@
 # syntax=docker/dockerfile:1
-ARG VERSION="bullseye-backports"
+ARG VERSION="bookworm-backports"
 FROM debian:${VERSION}
 
 
-ENV VERSION="bullseye"
+ENV VERSION="bookworm-backports"
 ENV PACKAGES="binfmt-support build-essential lsof sudo util-linux fdisk"
-ENV BPO="qemu qemu-user-static"
+ENV BPO="qemu-user-static"
 
 RUN set -ex \
     && apt-get update \
     && apt-get install --no-install-recommends --yes ${PACKAGES} \
-    && apt-get install --no-install-recommends --yes -t ${VERSION}-backports ${BPO} \
-    && apt autoremove \
+    && apt-get install --no-install-recommends --yes -t ${VERSION} ${BPO} \
+    && apt -y autoremove \
     && rm -rf /var/lib/apt/lists/*
 
 COPY . /CustoPiZer
