--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,11 @@ name: "Build container image"
 
 on:
   push:
+    tags:
+      - "v*"
     branches:
       - main
+      - th/custom
   workflow_dispatch:
 
 env:
